solved problem: text hiding behind image

--- a/style.css
+++ b/style.css
@@ -23,10 +23,17 @@ body {
 }
 
 .subtitle {
-	height: 36px;
-	line-height: 1.2;
+	/* height: 36px; */
+    height: auto;
+	display: flex;
+    min-height: 36px;
+    line-height: 1.2;                 
+    overflow: visible !important;
+    margin-bottom: 10px; 
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	overflow: hidden;
-	margin-bottom: 10px;
 }
 
 /* Center everything and limit max-width */
@@ -38,10 +45,10 @@ body {
 
 /* ==== Grid layout ==== */
 .grid {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-	grid-gap: 12px;
-	justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-gap: 12px;
+    justify-items: center;
 }
 
 /* ==== Individual card items ==== */
@@ -55,6 +62,7 @@ body {
 .thumbnail {
 	width: 100%;
 	max-width: 200px;
+    display: block;
 	height: 300px;
 	object-fit: cover;
 	border-radius: 8px;
